# YhormBot

./: LICENSE  README.md  __init__.py  fichero.py  main.py
.github/workflows/: python-app.yml
cogs/: examples_commands.py  fun_commands.py  help_commands.py  moderation_commands.py
config/: webserver.py
py/: __init__.py  chistes.txt  conf.py  converciones.py  fichero.py  main.py  pruebas.py  pyproject.toml  webserver.py
py/src/json/: gifs.json
src/json/: gifs.json
